prepare for gh pages

--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
         <title>Solar System Simulator</title>
         <meta charset="utf-8">
 
-        <!-- build:js js/libs.js -->
-        <script src="js/bower_components/d3/d3.min.js"></script>
-        <script src="js/bower_components/lodash/dist/lodash.js"></script>
-        <!-- endbuild -->
+        <script src="js/libs.js"></script>
 
         <style type="text/css">
             body {
@@ -27,8 +24,6 @@
     </head>
     <body>
 
-        <!-- build:js(.tmp) js/sss.js -->
-        <script src="js/SSS.js"></script>
-        <!-- endbuild -->
+        <script src="js/sss.js"></script>
     </body>
 </html>
