--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </style>
     </head>
     <body>
-
+        <script src="http://d3js.org/d3.v3.js"></script>
         <script src="js/sss.js"></script>
     </body>
 </html>
