--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </style>
     </head>
     <body>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.9.3/lodash.js"></script>
         <script src="http://d3js.org/d3.v3.js"></script>
         <script src="js/sss.js"></script>
     </body>
